--- a/_config.yml
+++ b/_config.yml
@@ -4,8 +4,8 @@
 #baseurl: http://localhost:4000
 #baseurl: http://qckanemoto.github.io
 baseurl: http://qckanemoto.github.io/jekyll-qck-theme
-title: Your name
-description: Some descriptions of yourself.
+title: notebook
+description: This is my personal notebook.
 avatar: /assets/img/ogp.png
 language: ja
 
