--- a/_config.yml
+++ b/_config.yml
@@ -71,7 +71,7 @@ paginate_path: page/:num
 #
 share_buttons: false
 ogp:
-  image_url: http://qckanemoto.github.io/jekyll-qck-theme/assets/img/ogp.png
+  image_url: http://xzenggit.github.io/notes/
   fb:
     admin: # facebook admin id
     app_id: # facebook application id
