--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@
 #
 #baseurl: http://localhost:4000
 #baseurl: http://qckanemoto.github.io
-baseurl: http://qckanemoto.github.io/jekyll-qck-theme
+baseurl: /notes
 title: notebook
 description: This is my personal notebook ^_^
 avatar: /assets/img/ogp.png
