--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,7 @@ icons:
   dribbble:
   flickr:
   instagram:
-  linkedin: www.linkedin.com/in/zengx
+  linkedin: http://www.linkedin.com/in/zengx
   pinterest:
   reddit:
   soundcloud:
