--- a/_config.yml
+++ b/_config.yml
@@ -92,7 +92,8 @@ gems:
 
 include: ["_pages"]
 
-markdown: redcarpet
+#markdown: redcarpet
+markdown: kramdown
 redcarpet:
   extensions: ["autolink", "fenced_code_blocks", "strikethrough", "superscript", "with_toc_data", "tables", "footnotes", "no_intra_emphasis"]
 highlighter: pygments
