--- a/_config.yml
+++ b/_config.yml
@@ -94,11 +94,27 @@ include: ["_pages"]
 
 #markdown: redcarpet
 markdown: kramdown
+kramdown:
+  input: GFM
+  auto_ids:       true
+  footnote_nr:    1
+  entity_output:  as_char
+  toc_levels:     1..6
+  smart_quotes:   lsquo,rsquo,ldquo,rdquo
+  enable_coderay: false
+  
+  coderay:
+    coderay_wrap:              div
+    coderay_line_numbers:      inline
+    coderay_line_number_start: 1
+    coderay_tab_width:         4
+    coderay_bold_every:        10
+    coderay_css:               style
 #redcarpet:
 #  extensions: ["autolink", "fenced_code_blocks", "strikethrough", "superscript", "with_toc_data", "tables", "footnotes", "no_intra_emphasis"]
 highlighter: rouge
-
-excerpt_separator: <!--more-->
+excerpt_separator: "\n\n"
+#excerpt_separator: <!--more-->
 
 sass:
   sass_dir: _sass
