--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ baseurl: /cn
 title: notebook
 description: This is my personal notebook ^_^
 avatar: /assets/img/ogp.png
-language: ja
+language: cn
 
 #
 # Icons
