--- a/_config.yml
+++ b/_config.yml
@@ -91,9 +91,9 @@ gems:
 
 include: ["_pages"]
 
-markdown: redcarpet
-redcarpet:
-  extensions: ["autolink", "fenced_code_blocks", "strikethrough", "superscript", "with_toc_data", "tables", "footnotes", "no_intra_emphasis"]
+markdown: kramdown
+#redcarpet:
+#  extensions: ["autolink", "fenced_code_blocks", "strikethrough", "superscript", "with_toc_data", "tables", "footnotes", "no_intra_emphasis"]
 highlighter: pygments
 
 excerpt_separator: <!--more-->
