--- a/_config.yml
+++ b/_config.yml
@@ -83,7 +83,7 @@ gems:
 
 #### index post is expanding or not 
 index:
-    expand: true           ## default is unexpanding,so you can only see the short description of each post.
+    expand: false           ## default is unexpanding,so you can only see the short description of each post.
     excerpt_link: Read More 
 
 #
