--- a/_config.yml
+++ b/_config.yml
@@ -96,7 +96,7 @@ index:
 
 include: ["_pages"]
 
-markdown: maruku
+markdown: kramdown
 #kramdown
 #redcarpet:
 #  extensions: ["autolink", "fenced_code_blocks", "strikethrough", "superscript", "with_toc_data", "tables", "footnotes", "no_intra_emphasis"]
