--- a/_config.yml
+++ b/_config.yml
@@ -101,6 +101,9 @@ markdown: kramdown
 #redcarpet:
 #  extensions: ["autolink", "fenced_code_blocks", "strikethrough", "superscript", "with_toc_data", "tables", "footnotes", "no_intra_emphasis"]
 highlighter: rouge
+kramdown:
+  input: GFM
+  syntax_highlighter: rouge
 
 excerpt_separator: <!--more-->
 
