--- a/_config.yml
+++ b/_config.yml
@@ -100,7 +100,7 @@ markdown: kramdown
 #kramdown
 #redcarpet:
 #  extensions: ["autolink", "fenced_code_blocks", "strikethrough", "superscript", "with_toc_data", "tables", "footnotes", "no_intra_emphasis"]
-highlighter: rouge
+# highlighter: rouge
 kramdown:
   input: GFM
   syntax_highlighter: rouge
