--- a/_config.yml
+++ b/_config.yml
@@ -97,13 +97,14 @@ index:
 include: ["_pages"]
 
 markdown: kramdown
+highlighter: rouge
 #kramdown
 #redcarpet:
 #  extensions: ["autolink", "fenced_code_blocks", "strikethrough", "superscript", "with_toc_data", "tables", "footnotes", "no_intra_emphasis"]
 # highlighter: rouge
 kramdown:
   input: GFM
-  syntax_highlighter: rouge
+  math_engine: mathjax
 
 excerpt_separator: <!--more-->
 
