--- a/_config.yml
+++ b/_config.yml
@@ -8,8 +8,8 @@ permalink:           pretty
 title:               notebook
 tagline:             'This is my personal notebook ^_^'
 description:         ''
-url:                 xzenggit.github.io/cn
-baseurl:             /
+url:                 xzenggit.github.io
+baseurl:             /cn
 paginate:            5
 
 # About/contact
