--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ permalink:           pretty
 title:               notebook
 tagline:             'This is my personal notebook ^_^'
 description:         ''
-url:                 
+# url:                 
 baseurl:             xzenggit.github.io/cn/
 paginate:            5
 
