--- a/_config.yml
+++ b/_config.yml
@@ -1,12 +1,12 @@
 name:                notebook
+description:         'his is my personal notebook ^_^'
 permalink:           pretty
 
 
 # Setup
 title:               notebook
 tagline:             'This is my personal notebook ^_^'
-description:         ''
-url:                 xzenggit.github.io/cn
+url:                 xzenggit.github.io/cn/
 baseurl:             /cn
 paginate:            5
 
