add search and feeds

--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 name:                notebook
-description:         'his is my personal notebook ^_^'
+description:         ''
 permalink:           pretty
 
 
